--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -54,6 +54,9 @@
   margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  width: 25vw;
 }
 
 .code {
